--- a/web/Style/Style.css
+++ b/web/Style/Style.css
@@ -1,12 +1,13 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 21-Mar-2016, 15:10:35
-    Author     : Daniel
-*/
+* { 
+    
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body{
+    margin: 0px;
+}
 
 p1{
     color: red;
@@ -24,6 +25,42 @@ textarea{
     resize: none;
 }
 
+.leftmenu ul {
+   float: left;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+}
+.leftmenu li{
+    
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color :#33b5e5;
+    color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    width: 150;
+}
+.leftmenu a {
+    color: white;
+    text-decoration: none;
+}
+
+main{
+    float: left;
+    width: 100%
+    
+}
+header{
+    float: start;
+    width: 100%;
+}
+footer{
+    width: 100%;
+    float: end;
+}
+
+
 input:focus {
     background-color: lightblue;
 }
@@ -40,13 +77,15 @@ input{
     border: 1px solid black;
     margin-bottom:  5px;
 }
-
-
-* { 
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+textarea{
+    border: 1px solid black;
+    margin-bottom:  5px;
 }
+
+
+
+
+
 
 label {
     float: left;
