--- a/web/Style/Style.css
+++ b/web/Style/Style.css
@@ -1,5 +1,5 @@
 * { 
-    
+
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -25,41 +25,24 @@ textarea{
     resize: none;
 }
 
-.leftmenu ul {
-   float: left;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-
-}
-.leftmenu li{
-    
-    padding: 8px;
-    margin-bottom: 7px;
-    background-color :#33b5e5;
-    color: #ffffff;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    width: 150;
-}
-.leftmenu a {
-    color: white;
-    text-decoration: none;
-}
-
-main{
-    float: left;
-    width: 100%
-    
-}
 header{
     float: start;
     width: 100%;
+    height: 70px;
+   
 }
+main{
+    float: top;
+    width: 100%;
+    height: 70%  
+
+}
+
 footer{
     width: 100%;
     float: end;
+    height: 100%;
 }
-
 
 input:focus {
     background-color: lightblue;
@@ -70,7 +53,7 @@ input[type=button], input[type=submit], input[type=reset] {
     color: white;
     padding: 5px 5px;
     text-decoration: none;
-    
+
     cursor: pointer;
 }
 input{
@@ -81,10 +64,6 @@ textarea{
     border: 1px solid black;
     margin-bottom:  5px;
 }
-
-
-
-
 
 
 label {
