--- a/web/Style/Style.css
+++ b/web/Style/Style.css
@@ -34,7 +34,6 @@ header{
 main{
     float: top;
     width: 100%;
-    height: 70%  
 
 }
 
@@ -66,7 +65,7 @@ textarea{
 }
 
 
-label {
+lsabel {
     float: left;
     width: 20%;
     text-align: right;
@@ -77,7 +76,7 @@ label {
     text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
 }
-.form-field-no-caption {
+.fosrm-field-no-caption {
     margin-left: 20%;
     padding-left: 0.5em;
 }
