--- a/web/Style/Style.css
+++ b/web/Style/Style.css
@@ -76,8 +76,12 @@ label {
     text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
 }
-.fosrm-field-no-caption {
+.form-field-no-caption {
     margin-left: 20%;
     padding-left: 0.5em;
+}
+
+div.topbar{
+    float: right;
 }
 
