--- a/web/Style/Style.css
+++ b/web/Style/Style.css
@@ -3,6 +3,7 @@
 body{
     margin: 0px;
     height: 100%;
+    background-color: blue;
 }
 
 p1{
@@ -28,9 +29,9 @@ header{
    
 }
 main{
+    background-color: white;
     float: top;
     width: 100%;
-    height: 80%;
 
 }
 
