--- a/web/Style/Style.css
+++ b/web/Style/Style.css
@@ -30,15 +30,18 @@ header{
 main{
     float: top;
     width: 100%;
-    height: 80%;
+    min-height: 600px;
+    height: auto;
 
 }
 
 footer{
     
     width: 100%;
-    float: end;
-    height: 20%;
+    height: 100px;
+    float: bottom;
+    margin-bottom: 0px;
+    
 }
 
 input:focus {
